--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,16 @@
 language: node_js
 node_js:
   - "0.8"
+before_install:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
 before_script:
+  - npm install -g phantomjs
   - npm install -g mocha
+  - npm install -g testem
+  - npm install -g saucelauncher
   - npm install mocha chai jQuery jsdom xmlhttprequest
 script:
   - mocha tests/spec/spinSpec.js -R spec -r tests/lib/setup-mocha.js
+  - testem ci
