--- a/package.json
+++ b/package.json
@@ -7,26 +7,11 @@
     "chai": "*",
     "jsdom": "*",
     "jQuery": "*",
-    "xmlhttprequest": "*"
-  },
-  "testling": {
-    "files": [
-      "tests/lib/setup-mocha.js",
-      "tests/spec/*.js"
-    ],
-    "scripts": [
-      "tests/lib/mocha.js",
-      "tests/lib/chai.js",
-      "tests/lib/jquery-1.10.1.min.js",
-      "spin.js"
-    ],
-    "browsers": {
-      "ie": [ 8, 9 ],
-      "firefox": [ 15 ],
-      "chrome": [ 22 ],
-      "safari": [ 5.1 ],
-      "opera": [ 12 ]
-    },
-    "harness": "mocha"
+    "xmlhttprequest": "*",
+    "wd": "*",
+    "saucelauncher": "*",
+    "soda": "*",
+    "q": "*",
+    "request": "*"
   }
 }
